# deepwiki-open-cli

./: .gitignore  .gitmodules  GEMINI.md  README.md  modified_api.py  previous_api.py  pyproject.toml  test_embed.py
.github/workflows/: ci.yml  release.yml
docs/: PLAN.md  PRD.md  TRACKING.md
docs/architecture/: ADR-001-deepwiki-open-integration.md  ARCHITECTURE.md  CONSTRAINTS.md  DATA_FLOW.md  PROTOCOL_AND_LLM_INTERACTION.md
docs/specs/: TECHNICAL_SPEC.md
scripts/: verify_post_release.ps1
src/deepwiki/: __main__.py
src/deepwiki/agent/: detector.py
src/deepwiki/cli/: app.py  ask.py  callbacks.py  config_cmd.py  export.py  generate.py  repl.py  research.py  serve.py
src/deepwiki/config/: defaults.py  embedder.json  generator.json  providers_catalog.py  settings.py
src/deepwiki/core/: models.py  prompts.py  rag_engine.py  wiki_generator.py
src/deepwiki/data/: cache_manager.py  document_reader.py  repo_manager.py  text_splitter.py  vector_store.py
src/deepwiki/output/: formatter.py  json_output.py  safe_display.py  terminal.py
src/deepwiki/providers/: base.py  litellm_provider.py
src/deepwiki/server/: api.py
tests/e2e/: test_generate_offline.py
tests/unit/: test_ask.py  test_cache_manager.py  test_config_cmd.py  test_document_reader.py  test_export_helpers.py  test_json_output.py  test_misc_modules.py  test_providers_catalog.py  test_rag_engine.py  test_repl.py  test_repo_manager.py  test_research.py  test_safe_display.py  test_server_api.py  test_settings.py  test_text_splitter.py  test_vector_store.py
